@@ -29,6 +29,7 @@ Unreleased Version 2.2.0-pre
  * Server Feature: Update the server to use the 2.2 protocol.
  * Server Fix: Fix up some invalid casts and thread ownership issues. Not sure if they actually caused issues in practice, but especially on Windows they might have.
  * Feature: Bring back the builtin server, allowing you to host "on this computer" again.
+ * Fix: Don't duplicate local fork on soft reset or undo depth change.
 
 2023-08-26 Version 2.2.0-beta.7
  * Fix: Make classic brushes not go brighter when smudging into transparency. Thanks to cada for reporting.
